# biometric_face_caputure

./: .gitignore  LICENSE  README.md
face_liveness_capture/: .dockerignore  ARCHITECTURE.md  CHANGELOG.md  CODE_REVIEW.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DELIVERY_SUMMARY.md  DOCKER_TESTING_SUMMARY.md  DOCUMENTATION_INDEX.md  Dockerfile  FILE_MANIFEST.md  FINAL_SESSION_REPORT.md  FINAL_SUMMARY.md  MAINFEST.in  MANIFEST.in  PROJECT_TREE.txt  QUICK_REFERENCE.md  SESSION_COMPLETION_REPORT.md  TASK_CHECKLIST.md  VISUAL_SUMMARY.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  nginx.conf  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
face_liveness_capture/.github/ISSUE_TEMPLATE/: bug_report.md
face_liveness_capture/.github/workflows/: docker-build.yml  publish.yml  tests.yml
face_liveness_capture/docs/: API.md  DEPLOYMENT.md  DOCKER.md  DOCUMENTATION_INDEX.md  FAQ.md  INSTALLATION.md  INTEGRATION_SUMMARY.md  PLATFORM_INTEGRATION.md  REST_API_GUIDE.md  TESTING.md  USAGE.md
face_liveness_capture/face_liveness_capture/backend/: detection.py  face_utils.py  validation.py
face_liveness_capture/face_liveness_capture/django_integration/: apps.py  serializers.py  urls.py  views.py
face_liveness_capture/frontend/: widget.css  widget.html  widget.js
face_liveness_capture/test_project/: views.py
face_liveness_capture/test_project/captured_photos/: 1400c200_metadata.txt
face_liveness_capture/test_project/templates/: index.html  success.html
face_liveness_capture/tests/: __init__.py  conftest.py  test_api.py  test_detection.py  test_django_integration.py  test_docker_deployment.py  test_validation.py
face_liveness_capture/tools/: test_csrf_post.py
(+5 files in other folders)
