[metadata]
name = face_liveness_capture
version = 0.1.0
author = Alok Kumar Kaushal
author_email = alokkaushal42@gmail.com
description = Client-side face liveness capture widget with Django integration
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alok-kumar8765/face_liveness_capture
project_urls =
    Bug Tracker = https://github.com/alok-kumar8765/face_liveness_capture/issues
    Documentation = https://github.com/alok-kumar8765/face_liveness_capture/tree/main/docs
    Source Code = https://github.com/alok-kumar8765/face_liveness_capture
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
keywords = face, liveness, capture, detection, django, mediapipe, verification

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    Django>=4.2
    djangorestframework
    mediapipe
    numpy
    opencv-python

[options.packages.find]
where = .
include = face_liveness_capture*

[bdist_wheel]
universal = 0

[egg_info]
tag_build =
tag_date = 0
